# mlspv

./: .gitmodules  CMakeLists.txt  Makefile.dev  README.md  vcsetup.bat  windows-android-apk.bat
android/app/src/main/cpp/: main.cc
cmake/android/: APK.cmake  AndroidManifest.xml.in  README.md
doc/: android.md
scripts/: bootstrap-android-apk.sh  bootstrap-linux.sh  build-clspv.sh  build-swiftshader-linux.sh  build-validationlayers.sh  setup-clspv.sh
src/: main.cc
